# ChangeLog for dev-python/networkx
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/networkx/ChangeLog,v 1.7 2010/09/22 16:24:31 arfrever Exp $

*networkx-1.3 (22 Sep 2010)

  22 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -files/networkx-0.99-setup.py.patch, -networkx-1.1.ebuild,
  +networkx-1.3.ebuild:
  Version bump.

*networkx-1.2 (24 Aug 2010)

  24 Aug 2010; Sébastien Fabbro <bicatali@gentoo.org>
  -networkx-1.0.1.ebuild, +networkx-1.2.ebuild:
  Version bump, closing bug #332825, thanks Francois Bissey for his testing

  01 Jun 2010; Joseph Jezak <josejx@gentoo.org> networkx-1.0.1.ebuild,
  networkx-1.1.ebuild:
  Marked ~ppc for bug #317225.

*networkx-1.1 (28 Apr 2010)

  28 Apr 2010; Sébastien Fabbro <bicatali@gentoo.org>
  -networkx-0.99.ebuild, +networkx-1.1.ebuild:
  Version bump

*networkx-1.0.1 (15 Jan 2010)

  15 Jan 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +networkx-1.0.1.ebuild:
  Version bump

  19 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> networkx-0.99.ebuild:
  Added dependendcies for the examples, closing bug #276075

*networkx-0.99 (28 Feb 2009)

  28 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/networkx-0.99-setup.py.patch, +metadata.xml, +networkx-0.99.ebuild:
  Initial import, see bug #120794. Thanks ibm, Marek and Tim Cera for their
  contributions
