@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/networkx
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/networkx/ChangeLog,v 1.7 2010/09/22 16:24:31 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/networkx/ChangeLog,v 1.8 2010/11/10 18:17:24 grobian Exp $
+
+  10 Nov 2010; Fabian Groffen <grobian@gentoo.org> networkx-1.3.ebuild:
+  Marked ~x86-linux, ~ppc-macos, bug #342001
 
 *networkx-1.3 (22 Sep 2010)
 
